--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -5,3 +5,10 @@
 .basic {
     color: rgb(60, 65, 223) !important;
 }
+
+/* @media only screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 1025px) {
+    ::-webkit-scrollbar {
+        width: 0px;
+        height: 6px;
+    }
+} */
