--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -5,7 +5,9 @@
 .basic {
     color: rgb(60, 65, 223) !important;
 }
-
+.height-100 {
+    height: 100%;
+}
 /* @media only screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 1025px) {
     ::-webkit-scrollbar {
         width: 0px;
