modify: editor, 수정페이지 CSS 변경

--- a/frontend/vue/src/assets/sass/menubar.scss
+++ b/frontend/vue/src/assets/sass/menubar.scss
@@ -1,8 +1,6 @@
 .menubar {
-
-  margin-bottom: 1rem;
   transition: visibility 0.2s 0.4s, opacity 0.2s 0.4s;
-
+  padding: 0px 4px 0px 4px;
   &.is-hidden {
     visibility: hidden;
     opacity: 0;
@@ -16,7 +14,8 @@
 
   &__button {
     font-weight: bold;
-    display: inline-flex;
+    // display: inline-flex;
+    width: 38px;
     background: transparent;
     border: 0;
     color: $color-black;
