--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -8,6 +8,15 @@
 .height-100 {
     height: 100%;
 }
+.bg-light-gray {
+    background-color: #ededed
+}
+.border-radius-10 {
+    border-radius: 10px;
+}
+.bold {
+    font-weight: 600;
+}
 /* @media only screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 1025px) {
     ::-webkit-scrollbar {
         width: 0px;
