--- a/frontend/Android/app/src/main/res/layout/item_loading.xml
+++ b/frontend/Android/app/src/main/res/layout/item_loading.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="6dp">
+    android:layout_margin="8dp"
+    android:orientation="vertical">
 
     <ProgressBar
-        android:id="@+id/progressbar"
+        android:id="@+id/item_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:indeterminateTint="@color/progress_loading"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:indeterminate="true"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp" />
 </LinearLayout>
