--- a/frontend/Android/app/src/main/res/values/colors.xml
+++ b/frontend/Android/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#ff0000</color>
     <color name="progress_loading">#3842FF</color>
+    <color name="colorPrimary">#426BD7</color>
+    <color name="colorPrimaryVariant">#3842FF</color>
+    <color name="bannerColor">#426DDD</color>
+    <color name="white_200">#B7FFFFFF</color>
 </resources>
