--- a/frontend/Android/app/src/main/res/values/themes.xml
+++ b/frontend/Android/app/src/main/res/values/themes.xml
@@ -19,4 +19,8 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
     </style>
+
+    <style name="CheckBox">
+        <item name="colorAccent">@color/gray</item>
+    </style>
 </resources>
