--- a/frontend/Android/app/src/main/res/values/colors.xml
+++ b/frontend/Android/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="un_played_color">#646464</color>
     <color name="buffered_color">#55FFFFFF</color>
     <color name="white_gray">#C8C8C8</color>
+    <color name="background_gray">#F1F1F1</color>
 </resources>
