--- a/frontend/Android/app/src/main/res/layout/activity_channel.xml
+++ b/frontend/Android/app/src/main/res/layout/activity_channel.xml
@@ -26,7 +26,7 @@
             app:srcCompat="@drawable/ic_baseline_arrow_back_white" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/channel_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
