--- a/frontend/Android/app/src/main/res/layout/activity_account_login.xml
+++ b/frontend/Android/app/src/main/res/layout/activity_account_login.xml
@@ -116,13 +116,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toTopOf="@+id/account_login_card_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_compass" />
+        app:srcCompat="@drawable/logo_ver1" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
