--- a/frontend/Android/app/src/main/res/layout/activity_init_launcher.xml
+++ b/frontend/Android/app/src/main/res/layout/activity_init_launcher.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".view.account.LauncherActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="런처 페이지 이미지"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher_ver1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
