--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -3,6 +3,10 @@
     padding: 0 20px;
 }
 
+.v-tabs-slider-wrapper {
+	transition: none !important;
+}
+
 .basic {
     color: rgb(60, 65, 223) !important;
 }
@@ -34,16 +38,16 @@ button {
 
 @media only screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 1025px) {
     ::-webkit-scrollbar {
-       width: 8px;
+       width: 0px;
    }
 
-   ::-webkit-scrollbar-thumb:vertical {
+   /* ::-webkit-scrollbar-thumb:vertical {
        height: 50px;
        background-color:rgb(187, 187, 187);
        border-radius: 5px;
        
-        /* background-image: linear-gradient(-45deg, rgba(0, 160, 255, 0.86), rgb(0, 72, 162)); */
-   }
+        background-image: linear-gradient(-45deg, rgba(0, 160, 255, 0.86), rgb(0, 72, 162));
+   } */
 }
 
 /* @media only screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 1025px) {
