chore: 부가적인 작업 - animation 추가 - 댓글 작업 완료 - 안쓰는 코드 제거

--- a/frontend/Android/app/src/main/res/layout/card_pager_home_video_header.xml
+++ b/frontend/Android/app/src/main/res/layout/card_pager_home_video_header.xml
@@ -54,6 +54,7 @@
             android:layout_marginBottom="5dp"
             android:clickable="true"
             android:focusable="true"
+            android:visibility="invisible"
             app:cardCornerRadius="0dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/pager_home_header_profile"
