코스 검색 리스트

--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -2,7 +2,9 @@
 .px-5 {
     padding: 0 20px;
 }
-
+.content-component{
+    background-color: #f9f9f9;
+}
 .basic {
     color: rgb(60, 65, 223) !important;
 }
