feat: 코스 강의 페이지

--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -3,7 +3,7 @@
 	padding: 0 20px;
 }
 .content-component {
-	background-color: #d5d5d5;
+	/* background-color: #d5d5d5; */
 }
 
 .v-tabs-slider-wrapper {
