--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -3,7 +3,7 @@
 	padding: 0 20px;
 }
 .content-component {
-	background-color: #fafafa;
+	/* background-color: #fafafa; */
 }
 
 .v-tabs-slider-wrapper {
