fix: 헤더 디자인 변경

--- a/frontend/vue/src/assets/css/style.css
+++ b/frontend/vue/src/assets/css/style.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .basic {
-	color: rgb(60, 65, 223) !important;
+	color: #9382D7 !important;
 }
 .v-btn {
 	letter-spacing: 0 !important;
