--- a/frontend/Android/app/src/main/res/layout/activity_course_index.xml
+++ b/frontend/Android/app/src/main/res/layout/activity_course_index.xml
@@ -116,6 +116,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="12dp"
+            android:scrollbars="vertical"
             android:text="코스 내용"
             android:textSize="14sp"
             android:textColor="@color/gray"
