--- a/frontend/Android/app/src/main/res/values/themes.xml
+++ b/frontend/Android/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-z<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.DoLearn" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
